# geopsy-cmake

./: CMakeLists.txt  CMakeLists_ArrayCore.txt  CMakeLists_ArrayGui.txt  CMakeLists_DinverCore.txt  CMakeLists_DinverDCCore.txt  CMakeLists_DinverDCGui.txt  CMakeLists_DinverGui.txt  CMakeLists_GeopsyCore.txt  CMakeLists_GeopsyGui.txt  CMakeLists_GeopsySLink.txt  CMakeLists_GeopsySLinkGui.txt  CMakeLists_GpCoreTools.txt  CMakeLists_MonoStation.txt  CMakeLists_QGpCompatibility.txt  CMakeLists_QGpCoreMath.txt  CMakeLists_QGpCoreStat.txt  CMakeLists_QGpCoreTools.txt  CMakeLists_QGpCoreWave.txt  CMakeLists_QGpGuiMath.txt  CMakeLists_QGpGuiTools.txt  CMakeLists_QGpGuiWave.txt  CMakeLists_SciFigs.txt  CMakeLists_dinver.txt  CMakeLists_dinverdc.txt  CMakeLists_dinverext.txt  CMakeLists_dinvermatlab.txt  CMakeLists_figue.txt  CMakeLists_fk.txt  CMakeLists_geopsy-fk.txt  CMakeLists_geopsy.txt  CMakeLists_geopsyarray.txt  CMakeLists_geopsydamping.txt  CMakeLists_geopsyfigs.txt  CMakeLists_geopsyhv.txt  CMakeLists_geopsynr.txt  CMakeLists_geopsyptmotion.txt  CMakeLists_geopsyrefra.txt  CMakeLists_geopsytfa.txt  CMakeLists_hvtfa.txt  CMakeLists_matfiles.txt  (+4 more)
cmake/modules/: FindMPFR.cmake
templates/exe/: CMakeLists.txt
templates/exe/cmake/modules/: FindGMP.cmake
templates/lib/: CMakeLists.txt
templates/lib/cmake/modules/: findFFTW.cmake
